# axia

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: extrinsic-ordering-check-from-bin.yml  publish-docker-release.yml  publish-draft-release.yml  release-bot.yml  release-candidate.yml
.rpm/: polkadot.spec
allychain/: Cargo.toml
allychain/test-allychains/: Cargo.toml
allychain/test-allychains/adder/: Cargo.toml
allychain/test-allychains/halt/: Cargo.toml
bridges/: .gitlab-ci.yml  Dockerfile  README.md  deny.toml
bridges/.config/: lingua.dic
bridges/.maintain/: rialto-weight-template.hbs
bridges/deployments/: README.md  run.sh  types-rococo.json  types-wococo.json
bridges/deployments/local-scripts/: relay-headers-rococo-to-wococo.sh  relay-headers-wococo-to-rococo.sh  run-rococo-node.sh  run-westend-node.sh  run-wococo-node.sh
bridges/deployments/networks/: millau.yml  rialto.yml
bridges/deployments/types/: rococo-wococo.json  rococo.json  wococo.json
bridges/docs/: testing-scenarios.md
bridges/fuzz/storage-proof/: Cargo.toml
bridges/modules/currency-exchange/: Cargo.toml
bridges/modules/dispatch/: Cargo.toml
bridges/modules/ethereum/: Cargo.toml
bridges/modules/ethereum-contract-builtin/: Cargo.toml
bridges/modules/grandpa/: Cargo.toml
bridges/modules/messages/: Cargo.toml
bridges/modules/shift-session-manager/: Cargo.toml
bridges/primitives/axia-core/: Cargo.toml
bridges/primitives/chain-alphanet/: Cargo.toml
bridges/primitives/chain-alphanet/src/: lib.rs
bridges/primitives/chain-axctest/: Cargo.toml
bridges/primitives/chain-axctest/src/: lib.rs
bridges/primitives/chain-kusama/: Cargo.toml
bridges/primitives/chain-millau/: Cargo.toml
bridges/relays/bin-substrate/: Cargo.toml
bridges/relays/bin-substrate/src/: finality_pipeline.rs  finality_target.rs  headers_initialize.rs  main.rs  messages_lane.rs  messages_source.rs  messages_target.rs  on_demand_headers.rs
bridges/relays/bin-substrate/src/chains/: millau_headers_to_rialto.rs  millau_messages_to_rialto.rs  mod.rs  rialto_headers_to_millau.rs  rialto_messages_to_millau.rs  rococo.rs  rococo_headers_to_wococo.rs  rococo_messages_to_wococo.rs  westend.rs  westend_headers_to_millau.rs  wococo.rs  wococo_headers_to_rococo.rs  wococo_messages_to_rococo.rs
bridges/relays/bin-substrate/src/cli/: bridge.rs  derive_account.rs  encode_call.rs  estimate_fee.rs  init_bridge.rs  mod.rs  relay_headers.rs  relay_headers_and_messages.rs  send_message.rs
bridges/relays/client-westend/: Cargo.toml
bridges/relays/client-westend/src/: lib.rs
bridges/relays/utils/: Cargo.toml
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  command.rs  lib.rs
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
doc/: shell-completion.md  testing.md
erasure-coding/: Cargo.toml
erasure-coding/fuzzer/: Cargo.toml
erasure-coding/src/: lib.rs
node/client/: Cargo.toml
node/client/src/: lib.rs
node/collation-generation/: Cargo.toml
node/core/runtime-api/: Cargo.toml
node/core/runtime-api/src/: cache.rs  lib.rs  tests.rs
node/jaeger/: Cargo.toml
node/malus/: Cargo.toml
node/metrics/: Cargo.toml
node/network/collator-protocol/: Cargo.toml
node/network/collator-protocol/src/collator_side/: mod.rs  tests.rs
node/network/collator-protocol/src/validator_side/: mod.rs  tests.rs
node/overseer/: Cargo.toml
node/primitives/: Cargo.toml
node/service/: Cargo.toml
node/service/res/: kusama.json  rococo.json  westend.json
node/service/src/: chain_spec.rs  grandpa_support.rs  lib.rs  overseer.rs  relay_chain_selection.rs  tests.rs
node/service/src/parachains_db/: upgrade.rs
node/subsystem/: Cargo.toml
node/subsystem-test-helpers/: Cargo.toml
node/subsystem-test-helpers/src/: lib.rs
node/subsystem-types/: Cargo.toml
node/subsystem-util/: Cargo.toml
node/test/axia-simnet/test/: Cargo.toml
node/test/axia-simnet/test/src/: main.rs
node/test/polkadot-simnet/test/: Cargo.toml
node/test/service/: Cargo.toml
node/test/service/src/: chain_spec.rs  lib.rs
node/test/service/tests/: build-blocks.rs  call-function.rs
parachain/: Cargo.toml
parachain/src/: primitives.rs
parachain/test-parachains/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs  v0.rs
roadmap/: parachains.md
roadmap/implementers-guide/: README.md  mermaid.min.js
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/alphanet/: Cargo.toml
runtime/axctest/: Cargo.toml
runtime/axia/: Cargo.toml
runtime/betanet/: Cargo.toml
runtime/common/: Cargo.toml
runtime/kusama/: Cargo.toml
runtime/parachains/: Cargo.toml
runtime/polkadot/: Cargo.toml
runtime/rococo/: Cargo.toml  build.rs
runtime/test-runtime/: Cargo.toml
runtime/westend/: Cargo.toml  build.rs
scripts/: run_all_benches.sh
scripts/common/: lib.sh
scripts/github/: generate_release_text.rb  polkadot_release.erb
scripts/gitlab/: check_extrinsics_ordering.sh  check_line_width.sh  check_runtime.sh  lingua.dic  test_deterministic_wasm.sh
simnet_tests/: README.md  run_tests.sh
simnet_tests/configs/: simple_rococo_testnet.toml
simnet_tests/tests/: parachains.feature
statement-table/: Cargo.toml
tests/: common.rs  invalid_order_arguments.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs
utils/remote-ext-tests/bags-list/: Cargo.toml
utils/remote-ext-tests/bags-list/src/: main.rs  voter_bags.rs
utils/staking-miner/: Cargo.toml  README.md
utils/staking-miner/src/: dry_run.rs  emergency_solution.rs  main.rs  monitor.rs  rpc_helpers.rs  signer.rs
utils/voter-bags/: Cargo.toml
utils/voter-bags/src/: main.rs
xcm/: Cargo.toml
xcm/pallet-xcm/: Cargo.toml
xcm/pallet-xcm-benchmarks/: Cargo.toml  template.hbs
xcm/src/: lib.rs
xcm/xcm-builder/: Cargo.toml
xcm/xcm-executor/: Cargo.toml
xcm/xcm-executor/integration-tests/: Cargo.toml
xcm/xcm-simulator/: Cargo.toml
xcm/xcm-simulator/example/: Cargo.toml
xcm/xcm-simulator/example/src/: lib.rs  parachain.rs  relay_chain.rs
(+494 files in other folders)
