[package]
name = "polkadot-rpc"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-blockchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-keystore = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-consensus-babe = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-chain-spec = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus-babe = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus-babe-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus-epochs = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-finality-grandpa-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-sync-state-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-rpc-system = { package = "axlib-frame-rpc-system", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-mmr-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-block-builder = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
beefy-gadget = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
beefy-gadget-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
