[package]
name = "axia-client"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-system-rpc-runtime-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

sp-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-storage = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-blockchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-session = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-authority-discovery = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-finality-grandpa = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-consensus-babe = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-transaction-pool = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-block-builder = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

sc-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-executor = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-service = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }

pallet-mmr-primitives = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

beefy-primitives = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# Axia Runtimes
axia-runtime = { path = "../../runtime/axia", optional = true }
axctest-runtime = { path = "../../runtime/axctest", optional = true }
alphanet-runtime = { path = "../../runtime/alphanet", optional = true }
betanet-runtime = { path = "../../runtime/betanet", optional = true }

axia-primitives = { path = "../../primitives" }

[features]
default = ["axia"]
axia = ["axia-runtime"]
axctest = ["axctest-runtime"]
betanet = ["betanet-runtime"]
alphanet = ["alphanet-runtime"]
