[package]
name = "axia-node-subsystem-test-helpers"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.51"
futures = "0.3.17"
parking_lot = "0.11.1"
axia-node-subsystem = { path = "../subsystem" }
axia-node-subsystem-util = { path = "../subsystem-util" }
axia-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-keystore = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-keystore = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-keyring = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-application-crypto = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

[dev-dependencies]
axia-overseer = { path = "../overseer" }
