[package]
name = "staking-miner"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
tokio = { version = "1.12", features = ["macros"] }
log = "0.4.11"
env_logger = "0.9.0"
structopt = "0.3.23"
jsonrpsee-ws-client = { version = "0.3.1", default-features = false, features = ["tokio1"] }
serde_json = "1.0"
serde = "1.0.130"
paste = "1.0.7"
thiserror = "1.0.30"

remote-externalities = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-version = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-io = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-npos-elections = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }


frame-system = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-election-provider-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-election-provider-multi-phase = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-staking = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-balances = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

core-primitives = { package = "axia-core-primitives", path = "../../core-primitives" }

runtime-common = { package = "axia-runtime-common", path = "../../runtime/common" }
axia-runtime = { path = "../../runtime/axia" }
axctest-runtime = { path = "../../runtime/axctest" }
alphanet-runtime = { path = "../../runtime/alphanet" }

sub-tokens = { git = "https://github.com/paritytech/substrate-debug-kit", branch = "master" }

[dev-dependencies]
sp-version = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
