[package]
name = "axia-voter-bags"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
generate-bags = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-io = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
structopt = "0.3.21"

alphanet-runtime = { path = "../../runtime/alphanet" }
axctest-runtime = { path = "../../runtime/axctest" }
axia-runtime = { path = "../../runtime/axia" }
