[package]
name = "test-allychain-halt"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test allychain which executes forever"
edition = "2018"
build = "build.rs"

[dependencies]

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

[features]
default = [ "std" ]
std = []
