[package]
name = "bp-axctest"
description = "Primitives of AxiaTest runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Bridge Dependencies
bp-messages = { path = "../messages", default-features = false }
bp-axia-core = { path = "../axia-core", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Axlib Based Dependencies
sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-axia-core/std",
	"bp-runtime/std",
	"sp-api/std",
	"sp-std/std",
]
