[package]
name = "axia-test-service"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.3"
tracing = "0.1.29"
rand = "0.8.3"
tempfile = "3.2.0"
tokio = "1.12.0"

# Axia dependencies
axia-overseer = { path = "../../overseer" }
axia-primitives = { path = "../../../primitives" }
axia-allychain = { path = "../../../allychain" }
axia-rpc = { path = "../../../rpc" }
axia-runtime-common = { path = "../../../runtime/common" }
axia-service = { path = "../../service" }
axia-node-subsystem = { path = "../../subsystem" }
axia-node-primitives = { path = "../../primitives" }
axia-test-runtime = { path = "../../../runtime/test-runtime" }
axia-runtime-allychains = { path = "../../../runtime/allychains" }

# Axlib dependencies
sp-authority-discovery = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-authority-discovery = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
babe = { package = "sc-consensus-babe", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
consensus_common = { package = "sp-consensus", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-benchmarking = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-system = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
inherents = { package = "sp-inherents", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-staking = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-balances = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-chain-spec = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-cli = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-executor = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-network = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-tracing = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sc-transaction-pool = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
service = { package = "sc-service", git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
sp-arithmetic = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-blockchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-keyring = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-state-machine = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
axlib-test-client = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
serde_json = "1.0.85"
axlib-test-utils = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
tokio = { version = "1.12", features = ["macros"] }
