[package]
name = "remote-ext-tests-bags-list"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
axia-runtime = { version = "0.9.8", path = "../../../runtime/axia" }
axctest-runtime = { version = "0.9.8", path = "../../../runtime/axctest" }

pallet-staking = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-election-provider-multi-phase = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-bags-list = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-election-provider-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-storage = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-tracing = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-std = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
remote-externalities = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
tokio = { version = "1", features = ["macros"] }
log = { version = "0.4.14" }
structopt = {version = "0.3.23" }
