[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-executor-integration-tests"
description = "Integration tests for the XCM Executor"
version = "0.9.12"

[dependencies]
frame-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
frame-system = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
futures = "0.3.17"
pallet-xcm = { path = "../../pallet-xcm" }
axia-test-client = { path = "../../../node/test/client" }
axia-test-runtime = { path = "../../../runtime/test-runtime" }
axia-test-service = { path = "../../../node/test/service" }
sp-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-keyring = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", default-features = false , branch = "master" }
sp-state-machine = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
xcm = { path = "../..", default-features = false }
xcm-executor = { path = ".." }
sp-tracing = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

[features]
default = ["std"]
std = [
	"xcm/std",
	"sp-runtime/std",
	"frame-support/std",
]
