[package]
name = "xcm-simulator-example"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples of xcm-simulator usage."
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
scale-info = { version = "1.0", features = ["derive"] }

frame-system = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
frame-support = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
pallet-balances = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-std = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-io = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
axia-core-primitives = { path = "../../../core-primitives" }
axia-runtime-allychains = { path = "../../../runtime/allychains" }
axia-allychain = { path = "../../../allychain" }
