[package]
name = "axia-simnet-test"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# axlib primitives
sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-blockchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# frame pallets
system = { package = "frame-system", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
balances = { package = "pallet-balances", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# axlib client libs
sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }

# axia deps
axia-simnet = { path = "../common" }
axia-runtime = { path = "../../../../runtime/axia" }
